# swagger/openapi.yaml
@@ -6,8 +6,8 @@ info:
 tags:
   - name: Subscribe
     description: 이메일 등록
-  - name: Temp
-    description: Temp api  
+  - name: Token
+    description: 토큰 발급
   
 paths:
   /api/subscribe:
@@ -66,4 +66,58 @@ paths:
                   error:
                     type: string
                     example: "Server error"
+#--------------------------------------------------------------------------------------#
+  /api/token/request:
+    post:
+      summary: 이메일 기반 임시 토큰 요청
+      description: 등록된 이메일 주소로 질문을 받았을 때, 사용자가 '답변하기' 버튼을 클릭하면 호출되는 API로 해당 이메일에 대한 임시 토큰을 생성하여 이후 인증에 사용됨.
+      tags:
+        - Token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+              properties:
+                email:
+                  type: string
+                  format: email
+                  example: temp@temp.com
+      responses:
+        200:
+          description: 토큰 생성 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: a9f4b3c1d22e1cfa8b9
+                  message:
+                    type: string
+                    example: "임시 토큰이 발급되었습니다."
+        400:
+          description: "이메일 누락"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: String
+                    example: "이메일이 누락되었습니다."
 
+        500:
+          description: "서버 에러"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: String
+                    example: "Server error"
